--- a/hands on ml2 scikit-learn.ipynb
+++ b/hands on ml2 scikit-learn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "1e4272f0",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "da5f5124",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0ff46023",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d0e64c30",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "207"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "2fa2d007",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "d8d0b913",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "21f4f7d1",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "bf1c0dd0",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "4a3e88b8",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "eb3dd9ec",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "id": "0ff99593",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "bccd4fc5",
    "metadata": {},
    "outputs": [],
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "7f48a49e",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "id": "234f6fd4",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
        "        408.    ,    3.5409])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "id": "87cb992c",
    "metadata": {},
    "outputs": [],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 75,
    "id": "ba8959dd",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
        "       [3.]])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 76,
    "id": "52386a80",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
        "\twith 16512 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,12 +485,417 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 77,
    "id": "509794aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "housing_1hot = pd.DataFrame(housing_cat_1hot.toarray(), columns=encoder.categories_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "c0aee0f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>&lt;1H OCEAN</th>\n",
+       "      <th>INLAND</th>\n",
+       "      <th>ISLAND</th>\n",
+       "      <th>NEAR BAY</th>\n",
+       "      <th>NEAR OCEAN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16507</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16508</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16509</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16510</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16511</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16512 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      <1H OCEAN INLAND ISLAND NEAR BAY NEAR OCEAN\n",
+       "0           1.0    0.0    0.0      0.0        0.0\n",
+       "1           1.0    0.0    0.0      0.0        0.0\n",
+       "2           0.0    0.0    0.0      0.0        1.0\n",
+       "3           0.0    1.0    0.0      0.0        0.0\n",
+       "4           1.0    0.0    0.0      0.0        0.0\n",
+       "...         ...    ...    ...      ...        ...\n",
+       "16507       0.0    1.0    0.0      0.0        0.0\n",
+       "16508       0.0    1.0    0.0      0.0        0.0\n",
+       "16509       0.0    1.0    0.0      0.0        0.0\n",
+       "16510       1.0    0.0    0.0      0.0        0.0\n",
+       "16511       0.0    0.0    0.0      1.0        0.0\n",
+       "\n",
+       "[16512 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_1hot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "4cfd524d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "rooms_ix, bedrooms_ix, population_ix, households_ix = 3, 4, 5, 6\n",
+    "\n",
+    "class CombinedAttributesAdder(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, add_bedrooms_per_room = True): # no *args or **kargs\n",
+    "        self.add_bedrooms_per_room = add_bedrooms_per_room\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self # nothing else to do\n",
+    "    def transform(self, X, y=None):\n",
+    "        rooms_per_household = X[:, rooms_ix] / X[:, households_ix]\n",
+    "        population_per_household = X[:, population_ix] / X[:, households_ix]\n",
+    "        if self.add_bedrooms_per_room:\n",
+    "            bedrooms_per_room = X[:, bedrooms_ix] / X[:, rooms_ix]\n",
+    "            return np.c_[X, rooms_per_household, population_per_household, bedrooms_per_room]\n",
+    "        else:\n",
+    "            return np.c_[X, rooms_per_household, population_per_household]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "89212162",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attr_adder = CombinedAttributesAdder(add_bedrooms_per_room=False)\n",
+    "housing_extra_attribs = attr_adder.transform(housing.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "f714f932",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "pipeline = Pipeline([('imp', SimpleImputer(strategy='median')),\n",
+    "                    ('atrr_adder', CombinedAttributesAdder()),\n",
+    "                    ('std_scaler', StandardScaler()),\n",
+    "                    ])\n",
+    "housing_num_pipe = pipeline.fit_transform(housing_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "b9c2e0b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# COLUMN TRANSFORMER PARA TRABAJAR CON TODAS LAS COLUMNAS SIN IMPORTAR SI SON CATEGORICAS O NUMERICAS.\n",
+    "# ESTO ES POSIBLE GRACIAS A COLUMNTRANSFORMER() CLASS, ELLA TOMA UNA PIPELINE Y UN ENCODER A LA VEZ\n",
+    "\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "num_atributes = list(housing_num)\n",
+    "cat_atributes = ['ocean_proximity']\n",
+    "\n",
+    "full_pipeline = ColumnTransformer([\n",
+    "    (\"num\", pipeline, num_atributes),\n",
+    "    (\"cat\", OneHotEncoder(), cat_atributes),\n",
+    "])\n",
+    "\n",
+    "housing_prepared = full_pipeline.fit_transform(housing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "ebd064c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(normalize=True)"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "lin_reg = LinearRegression(normalize=True)\n",
+    "lin_reg.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "24a44746",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions: [210644.60459286 317768.80697211 210956.43331178  59218.98886849\n",
+      " 189747.55849879] \n",
+      "\n",
+      "\n",
+      "Labels: [286600.0, 340600.0, 196900.0, 46300.0, 254500.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "some_data = housing.iloc[:5]\n",
+    "some_labels = housing_labels.iloc[:5]\n",
+    "some_data_prepared = full_pipeline.transform(some_data)\n",
+    "print(\"Predictions:\", lin_reg.predict(some_data_prepared), \"\\n\\n\")\n",
+    "print(\"Labels:\", list(some_labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "79b29a11",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68628.19819848923"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "housing_predictions = lin_reg.predict(housing_prepared)\n",
+    "lin_mse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "lin_rmse = np.sqrt(lin_mse)\n",
+    "lin_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "f51d28f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [66791.08170334 66958.08754699 70341.03974965 74757.07316495\n",
+      " 68031.13388938 71196.25873501 64961.41457209 68280.79400307\n",
+      " 71550.6740428  67665.10082067] \n",
+      "\n",
+      "Mean: 69053.26582279516 \n",
+      "\n",
+      "Standard deviation: 2735.6938873441895 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "scores = cross_val_score(lin_reg, housing_prepared, housing_labels,\n",
+    "                         scoring=\"neg_mean_squared_error\", cv=10)\n",
+    "lin_reg_scores = np.sqrt(-scores)\n",
+    "\n",
+    "def print_metrics(scores):\n",
+    "    print(\"Scores:\", scores, \"\\n\")\n",
+    "    print(\"Mean:\", scores.mean(), \"\\n\")\n",
+    "    print(\"Standard deviation:\", scores.std(), \"\\n\")\n",
+    "\n",
+    "print_metrics(lin_reg_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "ec99b1cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# USANDO EL GRIDSEARCH PARA ENCONTRAR LOS HIPERPARAMETROS IDEALES Y MAXIMIZAR EL MODELO\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "grid_search = GridSearchCV(lin_reg, param_grid=[{'copy_X': [True], 'fit_intercept' : [True], 'normalize' : [True]}], cv=5,\n",
+    "                           scoring='neg_mean_squared_error',\n",
+    "                           return_train_score=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "7a328cc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['explained_variance', 'r2', 'max_error', 'neg_median_absolute_error', 'neg_mean_absolute_error', 'neg_mean_absolute_percentage_error', 'neg_mean_squared_error', 'neg_mean_squared_log_error', 'neg_root_mean_squared_error', 'neg_mean_poisson_deviance', 'neg_mean_gamma_deviance', 'accuracy', 'top_k_accuracy', 'roc_auc', 'roc_auc_ovr', 'roc_auc_ovo', 'roc_auc_ovr_weighted', 'roc_auc_ovo_weighted', 'balanced_accuracy', 'average_precision', 'neg_log_loss', 'neg_brier_score', 'adjusted_rand_score', 'rand_score', 'homogeneity_score', 'completeness_score', 'v_measure_score', 'mutual_info_score', 'adjusted_mutual_info_score', 'normalized_mutual_info_score', 'fowlkes_mallows_score', 'precision', 'precision_macro', 'precision_micro', 'precision_samples', 'precision_weighted', 'recall', 'recall_macro', 'recall_micro', 'recall_samples', 'recall_weighted', 'f1', 'f1_macro', 'f1_micro', 'f1_samples', 'f1_weighted', 'jaccard', 'jaccard_macro', 'jaccard_micro', 'jaccard_samples', 'jaccard_weighted'])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.fit(housing_prepared, housing_labels)\n",
+    "import sklearn\n",
+    "sklearn.metrics.SCORERS.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "9bef49db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68628.19819848923"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVR\n",
+    "\n",
+    "svm_reg = SVR(kernel='linear')\n",
+    "svm_reg.fit(housing_prepared, housing_labels)\n",
+    "svm_house_pred = svm_reg.predict(housing_prepared)\n",
+    "svm_mse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "svm_rmse = np.sqrt(svm_mse)\n",
+    "svm_rmse"
    ]
   }
  ],
